--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <div id="main">
+        <button id="night-light">☀︎</button>
+        <h1>Generate a <br /><span id="night-span">random password</span></h1>
+        <h2>Never use an insecure password again.</h2>
+        <button>Generate passwords</button>
+        <hr />
+        <div id="pswrd-text">
+          <input name="password1" type="text" id="text1" />
+          <input name="password2" type="text" id="text2" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
