--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div id="main">
-        <button id="night-light">☀︎</button>
+        <button id="night-light">☀</button>
         <h1>Generate a <br /><span id="night-span">random password</span></h1>
         <h2>Never use an insecure password again.</h2>
         <div id="lengthBtn-Txt">
@@ -25,7 +25,7 @@
           </button>
           <div id="length">
             <label for="lengthInput">Length</label>
-            <input type="text" />
+            <input type="text" id="chLength" />
           </div>
         </div>
         <hr />
