added copy clipboard

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
           <input name="password1" type="text" id="text1" />
           <input name="password2" type="text" id="text2" />
         </div>
+        <div id="copy-btn-container">
+          <button class="copy-btn" id="cpy-btn1" onclick="copyPassword1()">
+            Copy
+          </button>
+          <button class="copy-btn" id="cpy-btn2" onclick="copyPassword2()">
+            Copy
+          </button>
+        </div>
       </div>
     </div>
   </body>
