completed night and light mode

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div class="main" id="main">
-        <button id="night-light">☀</button>
+        <button id="night-light" onclick="nightLightMode()">☯︎</button>
         <h1 id="h1-El">
           Generate a <br /><span class="night-span" id="span-lt"
             >random password</span
