completed did not add the checkboxes because the desgn was not ok

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             <input type="text" id="chLength" />
           </div>
         </div>
+        <!-- <div id="checkBox">
+          <label for="lengthInput" id="ch-lb">Letters</label>
+          <input type="checkbox" id="characters" />
+          <label for="lengthInput" id="letter-lb">Characters</label>
+          <input type="checkbox" id="letters" />
+        </div> -->
         <hr id="hr" />
         <div id="pswrd-text">
           <input name="password1" type="text" id="text1" />
